--- a/microkernel-main/Microkernel-core/pom.xml
+++ b/microkernel-main/Microkernel-core/pom.xml
@@ -37,6 +37,12 @@
             <version>${project.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Microkernel-brasil-plugin</artifactId>
+            <version>${project.version}</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <properties>
          <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
