--- a/microkernel-main/Microkernel-core/src/main/resources/plugin.properties
+++ b/microkernel-main/Microkernel-core/src/main/resources/plugin.properties
@@ -2,3 +2,4 @@
 # Configuracion de clases de entrega.
 delivery.mx = course.microkernel.plugins.mexico.MexicoDeliveryPlugin
 delivery.co = course.microkernel.plugins.colombia.ColombiaDeliveryPlugin
+delivery.br = course.microkernel.plugins.brasil.BrasilDeliveryPlugin
