--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /microkernel-main/Microkernel-colombia-plugin/target/
 /microkernel-main/Microkernel-mexico-plugin - copia/target/
 /microkernel-main/Microkernel-brasil-plugin/target/
+/microkernel-main/Microkernel-consumer/target/
