--- a/microkernel-main/Microkernel-consumer/pom.xml
+++ b/microkernel-main/Microkernel-consumer/pom.xml
@@ -19,6 +19,12 @@
         <artifactId>amqp-client</artifactId>
         <version>5.12.0</version>
     </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
     <maven.compiler.source>7</maven.compiler.source>
